<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AndroidLook">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin_top"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_button_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_button_background_left"
            android:button="@android:color/transparent"
            android:checked="true"
            android:text="@string/one"
            android:textColor="@drawable/radio_button_text" />

        <RadioButton
            android:id="@+id/radio_button_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_button_background_right"
            android:button="@android:color/transparent"
            android:text="@string/two"
            android:textColor="@drawable/radio_button_text" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin_top"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal"
        android:padding="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:iconifiedByDefault="false"
            android:background="@drawable/search_background"
            android:hint="@string/search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin_top"
        android:background="@drawable/list_item_background"
        android:orientation="vertical">

        <TextView
            style="?android:attr/textAppearanceListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/line_one" />

        <TextView
            style="?android:attr/textAppearanceListItemSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/line_two" />
    </LinearLayout>

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/item_margin_top"
        android:background="@drawable/button_background"
        android:drawableLeft="@drawable/button_icon"
        android:text="@string/back"
        android:textColor="@drawable/button_text" />
</LinearLayout>
